# nyx-modules

./: .gitignore  CMakeLists.txt  README.md
files/conf/: 99-nyx-modules.rules
src/: CMakeLists.txt
src/generic/: CMakeLists.txt
src/generic/device_info/: CMakeLists.txt
src/generic/device_info/emulator/: device_info_generic.c.in
src/generic/display/: CMakeLists.txt  display.c
src/generic/os_info/: CMakeLists.txt  os_info.c.in
src/generic/security/: CMakeLists.txt  aes.c  keystore.c  rsa.c  security.c  security.h.in  sha.c
src/generic/security/test/: CMakeLists.txt  test_security.c
src/machine/: qemuarm.cmake  qemuarmv7a.cmake  qemux86.cmake
src/rockhopper/: CMakeLists.txt
src/rockhopper/battery/: CMakeLists.txt  battery_read.h  batterylib.c  batterylib.h  fileutils.c  fileutils.h
src/rockhopper/battery/device/: battery.c
src/rockhopper/battery/emulator/: fake_battery.c  fake_battery_values.sh
src/rockhopper/charger/: CMakeLists.txt  chargerlib.c  chargerlib.h
src/rockhopper/charger/device/: charger.c
src/rockhopper/charger/emulator/: charger.c  chargerlib.c
src/rockhopper/keys/: CMakeLists.txt  keys_common.c  keys_common.h
src/rockhopper/keys/device/: keys.c
src/rockhopper/keys/emulator/: keys.c
src/rockhopper/led_controller/: CMakeLists.txt  led_controller.c
src/rockhopper/system/: CMakeLists.txt  rtc.c  rtc.h  util.c  util.h
src/rockhopper/system/emulator/: system.c
src/rockhopper/touchpanel/: CMakeLists.txt
src/rockhopper/touchpanel/emulator/: touchpanel.c  touchpanel_common.c  touchpanel_common.h  touchpanel_gestures.c  touchpanel_gestures.h
src/rockhopper/touchpanel/evdev/: touchpanel.c
src/rockhopper/utils/: utils.c  utils.h
